...
            viewModel.viewDelegate = self
        }
    }
    private let cellReuseID = "todo-cell"
    
    //MARK: Outlets
    @IBOutlet private weak var tableView: UITableView!
    
    //MARK: UIViewController
    override func loadView() {
        super.loadView()
        setupNavigationBar()
    }
...
    
    // MARK: Functions
    private func setupNavigationBar() {
        navigationItem.rightBarButtonItem = UIBarButtonItem(barButtonSystemItem: .add,
                                                            target: self,
                                                            action: #selector(addButtonTapped))
        title = "To Do List"
    }
    
    @objc private func addButtonTapped() {
        viewModel.addButtonTapped(from: self)
    }
}
...
