...
            <objects>
                <viewController storyboardIdentifier="AddVC" id="jnp-l3-X0I" customClass="AddVC" customModule="GetirTodo" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="g0L-L6-b8c">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uPd-TI-KWt">
                                <rect key="frame" x="20" y="94" width="374" height="50"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="OoI-4B-ngH"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="words"/>
...
                                <connections>
                                    <outlet property="delegate" destination="jnp-l3-X0I" id="1xN-2o-cST"/>
                                </connections>
                            </textView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZEd-Lw-vuf">
                                <rect key="frame" x="20" y="373" width="374" height="30"/>
                                <state key="normal" title="Save"/>
                                <connections>
                                    <action selector="save:" destination="jnp-l3-X0I" eventType="touchUpInside" id="G4L-eQ-XeP"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="UpY-II-hSg"/>
...
