...
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="PGM-oS-7Uc">
                                <rect key="frame" x="32" y="206.5" width="350" height="493"/>
                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                <accessibility key="accessibilityConfiguration" identifier="detailsTextView" label="detailsTextView"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="493" id="4on-Gy-dir"/>
                                    <constraint firstAttribute="width" constant="350" id="KhY-db-40X"/>
                                </constraints>
                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla paria
                                <color key="textColor" systemColor="labelColor"/>
...
